# Agent2Agent

./: AGENTS.md  README.md  pyproject.toml
a2a_agent_duo/host_adk_agent/: __init__.py  __main__.py  host_agent.py  remote_agent_connections.py
a2a_agent_duo/utility_langchain_agent/: __init__.py  __main__.py  utility_agent.py  utility_agent_executor.py  utility_mcp.py
a2a_multi_agent/: README.md  docker-compose.yaml
a2a_multi_agent/host_langchain_agent/: __init__.py  app.py  host_agent.py  host_agent.py.bk  remote_agent_connections.py
a2a_multi_agent/weather_ollama_agent/: __init__.py  __main__.py  mcp_config.json  weather_agent.py  weather_agent_executor.py  weather_mcp_server.py
a2a_simple/: README.md  __init__.py  __main__.py  agent_executor.py  test_client.py
