[project]
name = "agent2agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=1.0.3",
    "fastmcp>=3.3.1",
    "google-adk>=1.33.0",
    "gradio>=6.14.0",
    "langchain>=1.3.1",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.2",
    "sse-starlette>=3.4.4",
    "uvicorn>=0.47.0",
]
